@@ -32,7 +32,12 @@
   (let ((zone (if (or (not (featurep 'xemacs))
 		      (function-allows-args #'format-time-string 3))
 		  (list 'zone))))
-    `(cl-letf* ((fixed-time (date-to-time "2024-08-10 00:00:00 +0000"))
+    `(cl-letf* ((calendrical '(0 0 0 10 8 2024 nil nil 0))
+		(fixed-time (condition-case nil
+				;; new calling convention since Emacs 27
+				(encode-time calendrical)
+			      (wrong-number-of-arguments
+			       (apply #'encode-time calendrical))))
 		(orig-fun (symbol-function 'format-time-string))
 		((symbol-function 'format-time-string)
 		 (lambda (fmt-string &optional time ,@zone)
